--- a/SwiftGallery/Base.lproj/Main.storyboard
+++ b/SwiftGallery/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="sL2-0U-Og5">
                                 <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="1TC-kC-qUd">
                                     <size key="itemSize" width="200" height="201"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -40,6 +40,7 @@
                                                 </imageView>
                                             </subviews>
                                         </view>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="i69-wJ-8vh" firstAttribute="leading" secondItem="07p-tf-caA" secondAttribute="leading" id="1Au-Qi-G7k"/>
                                             <constraint firstItem="i69-wJ-8vh" firstAttribute="top" secondItem="07p-tf-caA" secondAttribute="top" id="cOY-9u-it8"/>
