--- a/SwiftGallery/Base.lproj/Main.storyboard
+++ b/SwiftGallery/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="YWX-4X-KiF">
     <device id="ipad9_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--SwiftGallery-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SwiftGallery" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,17 +19,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="sL2-0U-Og5">
-                                <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                                <rect key="frame" x="0.0" y="70" width="768" height="954"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="1TC-kC-qUd">
-                                    <size key="itemSize" width="200" height="201"/>
+                                    <size key="itemSize" width="200" height="200"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="15" minY="15" maxX="15" maxY="15"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CellId" id="07p-tf-caA" customClass="CollectionViewCell" customModule="SwiftGallery" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                        <rect key="frame" x="15" y="15" width="200" height="200"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
@@ -38,17 +38,26 @@
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="i69-wJ-8vh" customClass="CustomImageView" customModule="SwiftGallery" customModuleProvider="target">
                                                     <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                                 </imageView>
+                                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="wUc-V9-f4a">
+                                                    <rect key="frame" x="82" y="82" width="37" height="37"/>
+                                                    <color key="color" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </activityIndicatorView>
                                             </subviews>
                                         </view>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="i69-wJ-8vh" firstAttribute="leading" secondItem="07p-tf-caA" secondAttribute="leading" id="1Au-Qi-G7k"/>
+                                            <constraint firstItem="wUc-V9-f4a" firstAttribute="centerY" secondItem="i69-wJ-8vh" secondAttribute="centerY" id="8Bh-1a-bTS"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="wUc-V9-f4a" secondAttribute="bottom" constant="81" id="Jys-ry-iBp"/>
+                                            <constraint firstItem="wUc-V9-f4a" firstAttribute="centerX" secondItem="i69-wJ-8vh" secondAttribute="centerX" id="Lqh-Uy-Ufp"/>
                                             <constraint firstItem="i69-wJ-8vh" firstAttribute="top" secondItem="07p-tf-caA" secondAttribute="top" id="cOY-9u-it8"/>
                                             <constraint firstAttribute="trailing" secondItem="i69-wJ-8vh" secondAttribute="trailing" id="ly9-0G-qtt"/>
+                                            <constraint firstItem="wUc-V9-f4a" firstAttribute="leading" secondItem="07p-tf-caA" secondAttribute="leadingMargin" constant="66" id="nXf-jR-xSN"/>
                                             <constraint firstAttribute="bottom" secondItem="i69-wJ-8vh" secondAttribute="bottom" id="rjt-Iw-IKw"/>
                                         </constraints>
                                         <size key="customSize" width="200" height="200"/>
                                         <connections>
+                                            <outlet property="activityIndicator" destination="wUc-V9-f4a" id="Ah9-2U-2nq"/>
                                             <outlet property="image" destination="i69-wJ-8vh" id="q4S-66-I4c"/>
                                         </connections>
                                     </collectionViewCell>
@@ -68,11 +77,30 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="SwiftGallery" id="ZBC-pU-AMZ"/>
                     <connections>
                         <outlet property="collectionView" destination="sL2-0U-Og5" id="9VT-OC-OJ9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="896.875" y="132.421875"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="RHM-p5-8z4">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YWX-4X-KiF" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Bu0-0E-Lev">
+                        <rect key="frame" x="0.0" y="20" width="768" height="50"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Bol-BS-zxm"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="edI-JZ-9oR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="131.25" y="132.421875"/>
         </scene>
